# samsa

./: .env.example  .gitignore  .vercelignore  Auth Login  Auth Signup  BACKEND_ROADMAP.md  BACKEND_SETUP.md  Backend Rough Draft  DATABASE_PERSISTENCE.md  DATABASE_SETUP_INSTRUCTIONS.md  Dockerfile  PROJECT_STRUCTURE.md  Page Login  Page Signup  Payout Processing- please double check  Payout- create payout  Payout- please double check  Pricing  Pricing- please double check  Profile Wallets  README.md  Secure version of server.js, please double check  check_balance.js  fix-balances.js  index.html  package-lock.json  package.json  render.yaml  send-welcome.js  server.js  start.sh  vercel.json
Pages/: MarketDetails.js  Markets.js
Samsa/: Layout.js  index.html
backend/: .scale-down-lock  create_drake_markets.py  direct_test.py  force-run-digest.js  send-demo-digest.js  server.js  server.py  test_frontend_request.py  test_prediction.py  update_drake_markets.py  update_multi_multiple.py
backend/engine/: Cargo.toml
backend/engine/.cargo/: config.toml
backend/engine/src/: lib.rs  main.rs  payout.rs  pricing.rs
css/: styles.css
data/: market_snapshots_daily.json  markets.json  predictions.json  transactions.json  users.json
docs/: DATA_DRIVEN_ARCHITECTURE.md  DATA_FLOW.md  README.md
engine/: .gitignore
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
js/: samsa-core.js
lib/: auth.js  lmsr.py  metrics.js  payouts.js  rust-engine.js
mobile/: app.json  package.json
scripts/: migrate-json-to-db.js
web/: index.html
(+123 files in other folders)
