[package]
name = "samsa-engine"
version = "0.1.0"
edition = "2021"
description = "Samsa prediction market pricing and payout engine"

[[bin]]
name = "samsa-engine"
path = "src/main.rs"

[lib]
name = "samsa_engine"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
