[package]
name = "dobium-engine"
version = "0.1.0"
edition = "2021"
description = "Dobium prediction market pricing and payout engine"

[[bin]]
name = "dobium-engine"
path = "src/main.rs"

[lib]
name = "dobium_engine"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
